# fwii

./: CLAUDE.md  README.md  README.md.bak  SUMMARY.md  TODO.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: validate.md
.serena/: project.yml
.serena/memories/: phase2-data-pipeline-learnings.md  phase3-core-calculation-complete.md
agent-docs/: cli-tools-memory.md
config/: baseline_2020.yaml  settings.yaml  warning_areas.yaml
docs/: architecture.md  code-review-remaining.md  fix-severity-mapping-plan.md  impact-analysis-level3-exclusion.md  simplification-plan.md
scripts/: calculate_fwii.py  download_historic_data.py  export_to_csv.py  fetch_warning_areas.py  generate_trend_report.py  run_pipeline.py  test_duration_calculator.py
src/fwii/: __init__.py  api_client.py  cli.py  config.py  data_fetcher.py  data_loader.py  db_storage.py  duration_calculator.py  indicator_calculator.py  validators.py
tests/: conftest.py  test_config.py  test_data_loader.py  test_duration_calculator.py  test_indicator_calculator.py
